fix overflow issue with images page

--- a/src/components/ControlPanel/styles.module.css
+++ b/src/components/ControlPanel/styles.module.css
@@ -1,5 +1,6 @@
 .controlPanelContainer {
-  height: calc(100% - 30px);
+  height: calc(100% - 110px);
+  overflow-y: scroll;
   padding: 30px 10px;
   display: flex;
   flex-direction: column;
